<resources>
    <string name="app_name">My Mall</string>
    <string name="signOut">sign out</string>
    <string name="email_confirmation_success_message">Recovery email sent successfully! check your inbox</string>
    <string name="no_internet_connection_message"><b>Sorry !</b>\n There is a network problem or the server is down, try again later</string>
    <string-array name="egypt_states">
        <item>Alexandria</item>
        <item>Aswan</item>
        <item>Asyut</item>
        <item>Beheira</item>
        <item>Cairo</item>
        <item>Dakahlia</item>
        <item>Damietta</item>
        <item>Faiyum</item>
        <item>Gharbia</item>
        <item>Giza</item>
        <item>Ismailia</item>
        <item>Kafr El Sheikh</item>
        <item>Luxor</item>
        <item>Matruh</item>
        <item>Minya</item>
        <item>Monufia</item>
        <item>New Valley</item>
        <item>North Sinai</item>
        <item>Port Said</item>
        <item>Qalyubia</item>
        <item>Qena</item>
        <item>Red Sea</item>
        <item>Sharqia</item>
        <item>Sohag</item>
        <item>South Sinai</item>
        <item>Suez</item>
    </string-array>
    <string name="searchForProducts">Search for products</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="improve_visibility_and_save_energy">Improve visibility and save energy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="more_apps">More apps</string>
    <string-array name="dark_mode_options">
        <item>"Activate night mode"</item>
        <item>"Deactivate night mode"</item>
        <item>"Follow the system settings"</item>
    </string-array>
    <string name="choose_mode">Choose mode</string>
    <string name="night_mode_already_in_use">Night mode already in use</string>
    <string name="light_mode_already_in_use">Light mode already in use</string>
    <string name="follow_the_system_mode_already_in_use">Follow the system mode already in use</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="about_us">About us</string>
    <string name="brief">Introducing My Mall, your go-to e-commerce app for a diverse selection of products. From trendy clothing and mobile phones to home appliances and self-care items, and other much more sections. we offer a wide range of high-quality products. Please note that this application is currently in demo mode, featuring dummy products. Enjoy exploring our interface and getting a preview of the app\'s features. Happy shopping at My Mall!</string>
    <string name="contact_us">Contact us: \n\n %s</string>
    <string name="app_version">Version: %s</string>
    <string name="settings">Settings</string>
    <string name="empty_order_text">Look like you haven\'t made any order yet</string>
    <string name="order_summary">Order Summary</string>
    <string name="delivery">Delivery</string>
    <string name="free">Free</string>
    <string name="total_amount">Total Amount</string>
    <string name="saved_amount">You saved EGP. %1$s /- on this order</string>
    <string name="price_number_items">Price (%1$d items)</string>
    <string name="happy_shopping_image">Happy Shopping Image</string>
    <string name="home">Home</string>
    <string name="city">City*</string>
    <string name="locality_area_or_street">Locality area or street*</string>
    <string name="flat_no_building_name">Flat no.,Building name*</string>
    <string name="pin_code">Pin Code*</string>
    <string name="landmark_optional">Landmark(Optional)</string>
    <string name="name">Name*</string>
    <string name="mobile_no">Mobile number.*</string>
    <string name="alternate_mobile_number">Alternate mobile no.(Optional)</string>
    <string name="save_address">Save Address</string>
    <string name="continue_word">CONTINUE</string>
    <string name="your_order_has_been_confirmed">Your order has been confirmed</string>
    <string name="order_confirmation">You will shortly receive your order confirmation message and email</string>
    <string name="thank_you">Thank you</string>
    <string name="order_id">Order ID: %1$s</string>
    <string name="expected_delivery">Expected delivery within 4–6 days.</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="continue_shopping_button">Continue shopping button</string>
    <string name="success_icon">Success icon</string>
    <string name="shipping_details">SHIPPING DETAILS</string>
    <string name="change_or_add_address">Change or Add Address</string>
    <string name="user_info">User Info</string>
    <string name="password">Password</string>
    <string name="your_current_order_status">Your current order status</string>
    <string name="no_orders">NO ORDERS</string>
    <string name="your_recent_orders">Your recent orders</string>
    <string name="sign_out">Sign out</string>
    <string name="add_new_address">Add new address</string>
    <string name="number_addresses_saved">%1$d addresses saved</string>
    <string name="deliver_here">Deliver here</string>
    <string name="ordered">Ordered</string>
    <string name="placeholder_date" translatable="false">Mon, 12th Dec 2018</string>
    <string name="your_order_has_been_placed">your order has been placed.</string>
    <string name="packed">Packed</string>
    <string name="your_order_has_been_packed">your order has been packed.</string>
    <string name="shipped">Shipped</string>
    <string name="your_order_has_been_shipped">your order has been shipped.</string>
    <string name="delivered">Delivered</string>
    <string name="your_order_has_been_delivered">your order has been delivered.</string>
    <string name="total_ratings">total ratings (%1$d)</string>
    <string name="available">Available</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_worry_we_just_need_your_registered_email_address">Don\'t worry, we just need your registered email address</string>
    <string name="reset_password">Reset password</string>
    <string name="check_your_inbox_after_enter_your_email">Check your inbox after enter your email</string>
    <string name="go_back"><![CDATA[<< Go back]]></string>
    <string name="email_icon">Email icon</string>
    <string name="provide_your_registered_email">provide your registered email</string>
    <string name="email">Email</string>
    <string name="or">or</string>
    <string name="dont_have_an_account">Dont have an Account?</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="app_logo">app logo</string>
    <string name="change_photo">Change Photo</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update_info">Update info</string>
    <string name="view_all">View All</string>
    <string name="deals_of_the_day">Deals of the day</string>
    <string name="coupon">Coupon</string>
    <string name="my_address">My address</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="your_rating">Your rating</string>
    <string name="qty_number">Qty: %1$d</string>
    <string name="description">Description</string>
    <string name="specifications">Specifications</string>
    <string name="other_details">Other details</string>
    <string name="product_details">Product Details</string>
    <string name="quantity">Quantity</string>
    <string name="please_enter_your_password_to_change_the_email_address">Please enter your password to change the email address</string>
    <string name="done">Done</string>
    <string name="just_few_steps_away_from_your_cart">Just few steps away from your cart !</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up!</string>
    <string name="cash_on_delivery_available">Cash On Delivery Available</string>
    <string name="my_orders">My Orders</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>
    <string name="egp_price">EGP. %1$s /-</string>
    <string name="ratings_count">%1$s ratings</string>
    <string name="one_rate">%1$s rating</string>
    <string name="ratings">Ratings</string>
    <string name="product_added_to_wish_list">Product added to wish list</string>
    <string name="number_ratings">(%1$d) Ratings</string>
    <string name="out_of_stock">OUT OF STOCK</string>
    <string name="free_coupon">free %1$d coupon</string>
    <string name="free_coupons">free %1$d coupons</string>
    <string name="order_details">Order details</string>
    <string name="best_selling_products">Best selling products</string>
    <string name="no_recent_orders">No recent orders.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="my_addresses">My addresses</string>
    <string name="no_addresses">No saved addresses</string>
    <string name="state">State*</string>
    <string name="add_address">Add address</string>
    <string name="notifications">Notifications</string>
    <string name="apply_your_coupon_here">Apply your coupon here</string>
    <string name="redeem">Redeem</string>
    <string name="please_add_the_product_to_the_cart">Please add the product to the cart</string>
    <string name="update_address">Update Address</string>
    <string name="address_updated">Address updated</string>
    <string name="cancelled">Cancelled</string>
    <string name="your_order_has_been_cancelled">Your order has been cancelled</string>
    <string name="item_removed_from_cart_list">Item removed from your cart list</string>
    <string name="remove_item">Remove Item</string>
    <string name="coupon_applied">Coupon applied -%1$s</string>
    <string name="offer_applied_egp">Offer applied - EGP.%1$s/-</string>
    <string name="out_for_delivery">Out for Delivery</string>
    <string name="mobiles">Mobiles</string>
    <string name="appliances">Appliances</string>
    <string name="electronics">Electronics</string>
    <string name="furniture">Furniture</string>
    <string name="fashion">Fashion</string>
    <string name="books">Books</string>
    <string name="sports">Sports</string>
    <string name="toys">Toys</string>
    <string name="Wallarts">Wall arts</string>
    <string name="shoes">Shoes</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="we_re_back_online">We\'re back online</string>
    <string name="default_profile_image">Default profile image</string>
    <string name="product_removed_from_wishlist">Product removed from wish list</string>
    <string name="remove">REMOVE</string>
    <string name="login">Login</string>
    <string name="google" translatable="false">Google</string>
    <string name="there_are_no_items_on_your_wishlist">There are no items on your wishlist</string>
    <string name="password_must_have_at_least_6_characters">Password must have at least 6 characters</string>
    <string name="invalid_email">Invalid email</string>
    <string name="n_a" translatable="false">N/A</string>
    <string name="there_is_no_coupon_for_this_product">There is no coupon for this product</string>
    <string name="there_are_no_notifications_currently">There are no notifications currently</string>
    <string name="profile_image_updated_successfully">Profile image updated successfully</string>
</resources>