<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/detailsBackgroundColor"
    tools:context="com.blogspot.mido_mymall.ui.add_address.AddAddressFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"

                android:src="@drawable/address" />

            <EditText
                android:id="@+id/cityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="city"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:textColor="@color/productDetailsTextColor"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/localityOrStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="postalAddress"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/locality_area_or_street"
                android:inputType="textMultiLine"
                android:lines="3"
                android:textColor="@color/productDetailsTextColor"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/flatBuildEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="postalAddress"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/flat_no_building_name"
                android:inputType="textMultiLine"
                android:lines="3"
                android:textColor="@color/productDetailsTextColor"
                android:textColorHint="@color/hintColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/pinCodeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="postalCode"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/pin_code"
                    android:inputType="textPersonName"
                    android:textColor="@color/productDetailsTextColor"
                    android:textColorHint="@color/hintColor" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/stateSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/productDetailsTextColor"
                     />

            </LinearLayout>

            <EditText
                android:id="@+id/landmarkEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:autofillHints="postalAddress"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/landmark_optional"
                android:inputType="textPersonName"
                android:textColor="@color/productDetailsTextColor"
                android:textColorHint="@color/hintColor" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider">

            </com.google.android.material.divider.MaterialDivider>

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/productDetailsTextColor"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/mobileNoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:autofillHints="phone"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/mobile_no"
                android:inputType="phone"
                android:textColor="@color/productDetailsTextColor"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/alternateMobileNoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:autofillHints="phone"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/alternate_mobile_number"
                android:inputType="phone"
                android:textColor="@color/productDetailsTextColor"
                android:textColorHint="@color/hintColor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/save_address"
                android:textStyle="bold"
                android:backgroundTint="@color/buttonColor"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>